# neighborhood-library-service

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  database.py  grpc_server.py  models.py
app/proto/: library.proto  library_pb2.py  library_pb2_grpc.py
client/: entire_flow.py
migrations/models/: 0_20250411180018_init.py  1_20250412190039_update.py
tests/: conftest.py  test_grpc_server.py
